Finalizare proiect +CLEAN CODE